--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "material-icons": "^1.1.0",
     "popper.js": "^1.16.1",
+    "qs": "^6.10.1",
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
